<resources>
    <string name="app_name">GoodCall</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bf1">Blank Fragment 1</string>
    <string name="bf2">Blank fragment 2</string>
    <string name="bf3">Blank fragment 3</string>
    <string name="slide1_desc"><b>Group decisions made easy.</b></string>
    <string name="slide2_desc"><b>Randomization events built into your messaging experience.</b></string>
    <string name="slide3_desc"><b>We don\'t share your data with anyone.</b></string>
    <string name="continue_text">Continue</string>
    <string name="sign_up">Sign up with your email and a password:</string>
    <string name="submit">Submit</string>
    <string name="email_example">john.doe@example.com</string>
    <string name="email_icon">Email icon</string>
    <string name="email_desc"><b>Your email is used for security, not spam.</b></string>
    <string name="password_hint">**************</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="add_group">Add new groups</string>
    <string name="enter_display_name">Please enter a display name to continue:</string>
    <string name="display_name_hint">JohnDoe123</string>
    <string name="display_name_desc"><b>This is what other users will see.</b></string>
    <string name="create_group">Create a group</string>
    <string name="join_group">Join a group</string>
    <string name="add_group_desc">Icon of adding groups</string>
    <string name="paste_code">Paste code here</string>
    <string name="group_icon">Group icon</string>
    <string name="group_name"><b>Group\'s name</b></string>
    <string name="group_members">Group members go here</string>
    <string name="info">Info button</string>
    <string name="back">Back button</string>
    <string name="send_message">Send a text\n message</string>
    <string name="send_random">Send a \nrandom event</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="app_name_bold"><b>GoodCall</b></string>
    <string name="text_message_hint">Send a short text message to \nyour group</string>
    <string name="author_placeholder">Author Here</string>
    <string name="message_placeholder">in the air in need to polish bbq of oxygen and carbon dioxide</string>
    <string name="date_placeholder">Date Here</string>
    <string name="coin_result_placeholder">Fiddle01 flipped a coin that landed result</string>
    <string name="logout">Logout</string>
</resources>