<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/app_name_bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/salmon"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/textMessage"
        android:inputType="textMultiLine"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:lines="5"
        android:hint="@string/text_message_hint" />

</LinearLayout>