<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseNameActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_display_name"
        android:textColor="@color/red"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="10dp"
        android:hint="@string/display_name_hint"/>

    <Button
        android:id="@+id/submitNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/editTextDisplayName"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/vivid_tangerine"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageViewMail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/editTextDisplayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/email_icon"
        app:srcCompat="@drawable/ic_baseline_contacts_24" />

    <TextView
        android:id="@+id/slide3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/display_name_desc"
        android:gravity="center_horizontal"
        android:textColor="@color/vivid_tangerine"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_below="@id/imageViewMail"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>