<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="29dp"

        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_baseline_groups_2_24"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/group_icon"/>
        <TextView
            android:id="@+id/group_name"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:layout_marginStart="120dp"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/group_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="120dp"
            android:text="@string/group_members"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>


</RelativeLayout>