<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroupsFragment">


    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/ic_baseline_add_24"
        android:text="@string/create_group"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Button
        android:id="@+id/joinGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/createGroupButton"
        android:backgroundTint="@color/red"
        android:text="@string/join_group"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:drawableLeft="@drawable/ic_baseline_group_join_24"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_below="@id/joinGroupButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_tangerine_group_join_24"
        android:contentDescription="@string/add_group_desc"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/joinGroupButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_orange_group_add_24"
        android:contentDescription="@string/add_group_desc"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardElevation="50dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="50dp"
        android:layout_below="@id/joinGroupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:id="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/join_group"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:hint="@string/paste_code"
                android:inputType="text"
                tools:ignore="Autofill" />
            <Button
                android:id="@+id/submitCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/vivid_tangerine"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_baseline_group_join_24"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>







</RelativeLayout>