<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="#f5f5f5"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/top_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/group_icon"
            app:srcCompat="@drawable/ic_baseline_groups_2_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/chat_group_name_text"
            android:text="@string/group_name"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/ic_baseline_info_24" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_card_view" />


    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card_view"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="50dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/messageImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/send_message"
                app:srcCompat="@drawable/ic_baseline_message_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/messageImageView"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/sendTextText"
                android:gravity="center_horizontal"
                android:text="@string/send_message"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/randomSendImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="140dp"
                android:layout_toEndOf="@id/messageImageView"
                android:contentDescription="@string/send_random"
                app:srcCompat="@drawable/ic_baseline_send_time_extension_24" />

            <TextView
                android:id="@+id/sendRandomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/randomSendImageView"
                android:layout_marginStart="230dp"
                android:gravity="center_horizontal"
                android:text="@string/send_random"
                android:textColor="@color/black"
                android:textSize="21sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>